make fixes and excuses

--- a/index.html
+++ b/index.html
@@ -74,30 +74,30 @@
 
             <div class="workplace-list">
                 <div class="list-card">
-                    <i class="fas fa-bus-alt"></i>
-                    <h3>Toronto Transit Commision</h3>
-                    <h4>C#.NET, Oracle & Crystal Reports Developer / IFS</h4>
-                </div>
-                <div class="list-card">
-                    <i class="fas fa-building"></i>
-                    <h3>IBI Group</h3>
-                    <h4>Junior Developer</h4>
-                </div>
-                <div class="list-card">
-                    <i class="fas fa-prescription-bottle"></i>
-                    <h3>Veeva Systems</h3>
-                    <h4>Intern Performance Engineer</h4>
+                    <i class="fas fa-shopping-cart"></i>
+                    <h3>GroupBy</h3>
+                    <h4>Software Engineer - 2018 to Present</h4>
+                    <h4>Software Developer - Co-op - 2017</h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-pencil-ruler"></i>
                     <h3>Autodesk</h3>
-                    <h4>Software Developer</h4>
+                    <h4>Software Developer - 2016</h4>
                 </div>
                 <div class="list-card">
-                    <i class="fas fa-shopping-cart"></i>
-                    <h3>GroupBy</h3>
-                    <h4>Software Engineer</h4>
-                    <h4>Software Developer - Co-op</h4>
+                    <i class="fas fa-prescription-bottle"></i>
+                    <h3>Veeva Systems</h3>
+                    <h4>Intern Performance Engineer - 2016</h4>
+                </div>
+                <div class="list-card">
+                    <i class="fas fa-building"></i>
+                    <h3>IBI Group</h3>
+                    <h4>Junior Developer - 2015</h4>
+                </div>
+                <div class="list-card">
+                    <i class="fas fa-bus-alt"></i>
+                    <h3>Toronto Transit Commision</h3>
+                    <h4>C#.NET, Oracle & Crystal Reports Developer / IFS - 2014</h4>
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                 <div class="list-card">
                     <i class="fas fa-globe"></i>
                     <h3>Website</h3>
-                    <h4>You're Looking at it!</h4>
+                    <h4><a target="_blank" href="https://github.com/davidjameslee/davidjameslee.github.io">You're Looking at it!</a></h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-clock"></i>
