--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
                 <g id="moon-group">
                     <circle id="moon" class="moon" cx="50%" cy="25%" r="10%" />
-                    <circle id="moon-overlay-circle" cx="50%" cy="25%" r="10%" style="display: none;" />
-                    <rect id="moon-overlay-rectangle" style="display: none;" />
+                    <circle id="moon-overlay-circle" class="moon-overlay-circle" cx="50%" cy="25%" r="10%" style="display: none;" />
+                    <rect id="moon-overlay-rectangle" class="moon-overlay-rectangle" style="display: none;" />
                 </g>
 
                 <image id="fish" href="./images/koi-white.png" x="50%" y="20%" height="30%" width="30%" style="display: none;">
