--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                     <h4><a target="_blank" href="https://github.com/davidjameslee/GarminWatchface">GitHub Link</a></h4>
                 </div>
                 <div class="list-card">
+                    <i class="fas fa-keyboard"></i>
+                    <h3>KnomberPad</h3>
+                    <h4><a target="_blank" href="https://github.com/davidjameslee/knomberpad">GitHub Link</a></h4>
+                </div>
+                <div class="list-card">
                     <i class="fas fa-music"></i>
                     <h3>osu! Keyboard</h3>
                     <h4>Soon™</h4>
@@ -127,11 +132,6 @@
                 <div class="list-card">
                     <i class="fas fa-print"></i>
                     <h3>3D Printing</h3>
-                    <h4>Soon™</h4>
-                </div>
-                <div class="list-card">
-                    <i class="fas fa-keyboard"></i>
-                    <h3>Keyboards</h3>
                     <h4>Soon™</h4>
                 </div>
             </div>
