--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
-    <canvas id="canvas" class="canvas"></canvas>
 
     <!-- Navbar -->
     <nav class="navbar">
@@ -25,6 +24,7 @@
 
     <!-- Home Section -->
     <div class="container">
+        <canvas id="canvas" class="canvas"></canvas>
 
         <div id="home" class="home">
             <svg id="home-svg" class="home-svg">
@@ -60,7 +60,8 @@
                 Engineering at the University of Waterloo and am currently working in Toronto. Somethings that make me, me are:
                 <br />
                 <br />
-                Video games | Software | Keyboards | Mahjong | 3D Printing
+                Java | Kubernetes | Web Dev | Google Cloud Platform | Terraform | Android
+                Video games | Software | Keyboards | Mahjong | 3D Printing | Memes
 
             </div>
 
@@ -139,26 +140,62 @@
 
 
         <!-- Footer -->
-        <div class="footer">
-            <div id="contact" class="contact">
-                <a target="_blank" href="mailto:info@djlee.xyz" class="contact-link contact-email">
-                    <i class="far fa-2x fa-envelope"></i>
-                </a>
-                <a target="_blank" href="https://github.com/davidjameslee" class="contact-link contact-github">
-                    <i class="fab fa-2x fa-github"></i>
-                </a>
-                <a target="_blank" href="https://www.linkedin.com/in/dj6lee/" class="contact-link contact-linkedin">
-                    <i class="fab fa-2x fa-linkedin"></i>
-                </a>
-                <a target="_blank" href="https://www.last.fm/user/TheBroccOLee" class="contact-link contact-lastfm">
-                    <i class="fab fa-2x fa-lastfm"></i>
-                </a>
-                <a target="_blank" href="https://www.thingiverse.com/BroccOLee"
-                    class="contact-link contact-thingiverse">
-                    <i class="fas fa-2x fa-cube"></i>
-                </a>
+        <footer>
+            <div class="footer-div">
+                <div class="footer-about">
+                    <img src="/images/koi_logo2.svg" />
+                    <div>
+                        <h3><u>David Lee</u></h4>
+                        Computer Engineer
+                        <br>
+                        Avid collector of memes
+                    </div>
+                </div>
+                <div id="contact" class="contact">
+                    <a target="_blank" href="mailto:info@djlee.xyz" class="contact-link">
+                        <i class="far fa-3x fa-envelope contact-circle contact-email"></i>
+                    </a>
+                    <a target="_blank" href="https://github.com/davidjameslee" class="contact-link">
+                        <i class="fab fa-3x fa-github contact-circle contact-github"></i>
+                    </a>
+                    <a target="_blank" href="https://www.linkedin.com/in/dj6lee/" class="contact-link">
+                        <i class="fab fa-3x fa-linkedin contact-circle contact-linkedin"></i>
+                    </a>
+                    <a target="_blank" href="https://www.last.fm/user/TheBroccOLee" class="contact-link">
+                        <i class="fab fa-3x fa-lastfm contact-circle contact-lastfm"></i>
+                    </a>
+                    <a target="_blank" href="https://www.thingiverse.com/BroccOLee" class="contact-link">
+                        <i class="fas fa-3x fa-cube contact-circle contact-thingiverse"></i>
+                    </a>
+                </div>
             </div>
-        </div>
+        </footer>
+        <!-- <footer>
+            <div class="footer">
+                <div class="footer-text">
+                    <img src="./images/koi_logo2.svg"/>
+                    <div>David Lee, Computer Engineer and avid collector of memes</div>
+                </div>
+                <div id="contact" class="contact">
+                    <a target="_blank" href="mailto:info@djlee.xyz" class="contact-link contact-email">
+                        <i class="far fa-2x fa-envelope"></i>
+                    </a>
+                    <a target="_blank" href="https://github.com/davidjameslee" class="contact-link contact-github">
+                        <i class="fab fa-2x fa-github"></i>
+                    </a>
+                    <a target="_blank" href="https://www.linkedin.com/in/dj6lee/" class="contact-link contact-linkedin">
+                        <i class="fab fa-2x fa-linkedin"></i>
+                    </a>
+                    <a target="_blank" href="https://www.last.fm/user/TheBroccOLee" class="contact-link contact-lastfm">
+                        <i class="fab fa-2x fa-lastfm"></i>
+                    </a>
+                    <a target="_blank" href="https://www.thingiverse.com/BroccOLee"
+                        class="contact-link contact-thingiverse">
+                        <i class="fas fa-2x fa-cube"></i>
+                    </a>
+                </div>
+            </div>
+        </footer> -->
     </div>
 
 
