Update github links

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
                 <div class="list-card">
                     <i class="fas fa-globe"></i>
                     <h3>Website</h3>
-                    <h4><a target="_blank" href="https://github.com/davidjameslee/davidjameslee.github.io">You're Looking at it!</a></h4>
+                    <h4><a target="_blank" href="https://github.com/djleee/davidjameslee.github.io">You're Looking at it!</a></h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-clock"></i>
                     <h3>Garmin Watchface</h3>
-                    <h4><a target="_blank" href="https://github.com/davidjameslee/GarminWatchface">GitHub Link</a></h4>
+                    <h4><a target="_blank" href="https://github.com/djleee/GarminWatchface">GitHub Link</a></h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-keyboard"></i>
                     <h3>KnomberPad</h3>
-                    <h4><a target="_blank" href="https://github.com/davidjameslee/knomberpad">GitHub Link</a></h4>
+                    <h4><a target="_blank" href="https://github.com/djleee/knomberpad">GitHub Link</a></h4>
                 </div>
                 <div class="list-card">
                     <i class="fas fa-music"></i>
